items into December